Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-126743

If QT_ANDROID_PACKAGE_SOURCE_DIR is set to a specific path, a build folder is recursively created within the build folder.

XMLWordPrintable

    • Android
    • 3047d6a8a (dev), ee0cb525c (6.10), 51fbd97bc (6.9), 1c91d7a07 (tqtc/lts-6.8), d47777809 (tqtc/lts-6.5)
    • 2024wk38s2FOQtforAndroid, 2024wk28s2FOQtforAndroid, 2024wk32s2FOQtforAndroid, 2024wk42s3FOQtforAndroid, 2024wk50s3FOQtforAndroid, 2024wk52FOQtforAndroid, 2025wk04s3FOQtforAndroid, 2025wk08s1QtforAndroid, 2025wk18s1QtforAndroid, 2025wk20s1QtforAndroid, 2025wk22s1-2QtforAndroid, 2025wk24s2QtforAndroid

      Use QtCreator 13.01, Qt6.5.3
      Steps to reproduce:
      ・Projects > Build Android APK > Detailes > Create Templates
      ・Change the path of Android Package source directory to "ProjectPath/android" > "ProjectPath" and click
      ・Add the following to CMakeLists.txt
      set_property(TARGET apptest APPEND PROPERTY
          QT_ANDROID_PACKAGE_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/
      )
      ・Build
      build folder is recursively created within the build folder.

        1. callstack.png
          55 kB
          Joerg Bornemann
        2. directory.png
          43 kB
          Joerg Bornemann
        3. processes.png
          150 kB
          Joerg Bornemann
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            jani-korteniemi Jani Korteniemi
            hoshijima Takanori Hoshijima
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes