src/tools/androiddeployqt/main.cpp
@@ -1498,6 +1498,10 @@ bool copyFiles(const QDir &sourceDirectory, const QDir &destinationDirectory, co
     for (const QFileInfo &entry : entries) {
         if (entry.isDir()) {
             QDir dir(entry.absoluteFilePath());
+            const bool destinationInCopyDir = destinationDirectory.absolutePath().startsWith(dir.absolutePath());
+            if (sourceDirectory == options.androidSourceDirectory && destinationInCopyDir)
+                continue;
+
             if (!destinationDirectory.mkpath(dir.dirName())) {
                 fprintf(stderr, "Cannot make directory %s in %s\n", qPrintable(dir.dirName()), qPrintable(destinationDirectory.path()));
                 return false;
